Added CSS examples

--- a/examples/em.html
+++ b/examples/em.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Link Demo</title>
+        <title>Emphasis Demo</title>
     </head>
     <body>
-        <div class="container">
+        <div>
             
             <!-- About Me -->
             <div id="about-me">
                 <h1>Harry Q. Bovik</h1>
-                <p><strong>Email:</strong> <a href="mailto:skrulcik@gmail.com">skrulcik@gmail.com</a></p>
+                <p><strong>Email:</strong> skrulcik@gmail.com</p>
                 <p><strong>Phone:</strong> (123) 321-4567</p>
             </div>
 
@@ -24,10 +24,10 @@
                 <h2>Work Experience</h2>
 
                 <h3>Software Engineer - <em>Carnegie Watermelon University</em></h3>
-                <p>Researching stuff that has to do with  <strong>computers</strong>. Somehow related to science. Gotta love that <strong>science</strong>. And those Computers. Was awarded many <strong>awards</strong> for award-worthy accomplishments.<a href="https://cs.cmu.edu/">Website</a></p>
+                <p>Researching stuff that has to do with  <strong>computers</strong>. Somehow related to science. Gotta love that <strong>science</strong>. And those Computers. Was awarded many <strong>awards</strong> for award-worthy accomplishments.</p>
 
                 <h3>Software Development Intern - <em>ACME Software</em></h3>
-                <p>Worked on really <strong>important stuff</strong>. More stuff about jobs and crap. Responsibilty. <strong>Big Data. Agile Blah Blah Blah.</strong> Buzzwordified description of basic tasks. <a href="https://github.com/SkottyK">Project Page</a></p>
+                <p>Worked on really <strong>important stuff</strong>. More stuff about jobs and crap. Responsibilty. <strong>Big Data. Agile Blah Blah Blah.</strong> Buzzwordified description of basic tasks.</p>
             </div>
             
             <!-- SKILLS -->
