--- a/examples/ul.html
+++ b/examples/ul.html
@@ -4,7 +4,7 @@
         <title>Link Demo</title>
     </head>
     <body>
-        <div class="container">
+        <div>
             
             <!-- About Me -->
             <div id="about-me">
