--- a/examples/p.html
+++ b/examples/p.html
@@ -4,7 +4,7 @@
         <title>P Tag Demo</title>
     </head>
     <body>
-        <div class="container">
+        <div>
             
             <!-- About Me -->
             <div id="about-me">
