Change picture to Mr. Rogers

--- a/examples/CSS_fonts.html
+++ b/examples/CSS_fonts.html
@@ -10,7 +10,7 @@
             <!-- About Me -->
             <div id="about-me">
                 <div>
-                    <img src="http://www.andrew.cmu.edu/user/skrulcik/rsc/HeadShotCircle.png"/>
+                    <img src="../img/MrRogers.jpg"/>
                 </div>
                 <div>
                     <h1>Harry Q. Bovik</h1>
